// This is the definition of the syntax of this file so the buffer can interpret the code
syntax = "proto3";

// This option allows the creation of multiple files
option java_multiple_files = true;
// This option sets the destination folder of the service autogenerated files
option java_package = "server.services.prescriptionsService";
// This option sets the name of the class where the service will be implemented
option java_outer_classname = "PrescriptionsServiceImpl";

// This is the name of the folder where all the autogenerated files will be
package prescriptionsService;

// These are all the REQUEST and RESPONSE messages you need for all the public methods in the service
message CreateRequest {
  string patientId = 1;
  string doctorId = 2;
  enum drugs {
    drug = 0;
    doses = 1;
    comments = 2;
  }
}

message Prescription {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string password = 5;
  string role = 6;
}

message ErrorResponse {
  string errorMessage = 1;
}

message Empty {}

// This is the service declaration
service Prescriptions {
  // These are the method declarations
  rpc Create (CreateRequest) returns (Prescription) {}
  rpc GetAll (Empty) returns (stream Prescription) {}
}